# ballista-mvp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
ballista-cli/: Cargo.toml
ballista-cli/src/: command.rs  exec.rs  main.rs
ballista/client/: Cargo.toml
ballista/client/src/: context.rs  lib.rs  prelude.rs
ballista/core/: Cargo.toml  build.rs
ballista/core/proto/: ballista.proto
ballista/core/src/: client.rs  config.rs  error.rs  event_loop.rs  lib.rs  utils.rs
ballista/core/src/execution_plans/: distributed_query.rs  mod.rs  shuffle_reader.rs  shuffle_writer.rs  unresolved_shuffle.rs
ballista/core/src/serde/: mod.rs
ballista/core/src/serde/scheduler/: from_proto.rs  mod.rs  to_proto.rs
ballista/executor/: Cargo.toml  executor_config_spec.toml
ballista/executor/src/: cpu_bound_executor.rs  execution_engine.rs  executor.rs  executor_process.rs  executor_server.rs  flight_service.rs  lib.rs
ballista/executor/src/metrics/: mod.rs
ballista/scheduler/: Cargo.toml  build.rs  scheduler_config_spec.toml
ballista/scheduler/src/: config.rs  display.rs  flight_sql.rs  lib.rs  planner.rs  scheduler_process.rs  test_utils.rs
ballista/scheduler/src/api/: handlers.rs  mod.rs
ballista/scheduler/src/cluster/: kv.rs  memory.rs  mod.rs
ballista/scheduler/src/cluster/event/: mod.rs
ballista/scheduler/src/cluster/storage/: etcd.rs  mod.rs  sled.rs
ballista/scheduler/src/cluster/test_util/: mod.rs
ballista/scheduler/src/metrics/: mod.rs
ballista/scheduler/src/scheduler_server/: event.rs  grpc.rs  mod.rs  query_stage_scheduler.rs
ballista/scheduler/src/state/: execution_graph.rs  execution_stage.rs  executor_manager.rs  mod.rs  session_manager.rs  task_manager.rs
ballista/scheduler/src/state/execution_graph/: execution_stage.rs
examples/: Cargo.toml
testdata/customer/: customer1.parquet  customer2.parquet  customer3.parquet
testdata/orders/: orders1.parquet  orders2.parquet  orders3.parquet
testdata/small_lineitem/: lineitem1.parquet  lineitem2.parquet  lineitem3.parquet
